added og properties

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <meta property="og:title" content="Weather App">
+    <meta property="og:description" content="User interactive weather app which retrieves current weather forecast from Open Weather API based on user input location.">
+    <meta property="og:image" content="https://res.cloudinary.com/harrydhamija/image/upload/v1620463993/weather-desktop_yncoxn.png">
+    <meta property="og:url" content="https://hd-weather-app.netlify.app">
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/d53415cc50.js" crossorigin="anonymous"></script>
 
